updated deploy target

--- a/pom.xml
+++ b/pom.xml
@@ -104,12 +104,27 @@
     <url>https://issues.apache.org/jira/browse/CAMEL</url>
   </issueManagement>
 
+    <distributionManagement>
+        <repository>
+            <id>mcom-releases</id>
+            <name>MCOM Release Repository</name>
+            <url>https://archiva.bcn.magento.com/repository/internal</url>
+        </repository>
+        <snapshotRepository>
+            <id>mcom-snapshots</id>
+            <name>MCOM Snapshot Repository</name>
+            <url>https://archiva.bcn.magento.com/repository/snapshots</url>
+        </snapshotRepository>
+    </distributionManagement>
+
+<!--
   <distributionManagement>
     <site>
       <id>apache.website</id>
       <url>${site-repo-url}</url>
     </site>
   </distributionManagement>
+-->
 
   <!-- Comment out the snapshot repositories as we don't need them now -->
   <repositories>
